--- a/resources/cssLess/styles-light.less
+++ b/resources/cssLess/styles-light.less
@@ -347,4 +347,11 @@ option {
 	.hr-gear-icon-mixin(~'charm', 20);
 }
 
+.locationRow {
+	position: sticky;
+	top: 70px;
+	z-index: 100;
+	background: @body-bg;
+}
+
 @import "_overrides";
